# tauri-mcp-server

./: .gitignore  BUILD.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  build.py  mise.toml  package.json  publish.py  pyproject.toml  requirements-dev.txt  requirements-publish.txt  requirements.txt  test_publish.py
.mise/hooks/: enter  leave
docs/: CLAUDE_CODE_SETUP.md  MISE_SETUP.md  PUBLISHING.md  PUBLISH_SCRIPT_SUMMARY.md  PUBLISH_WORKFLOW.md  SETUP.md  TROUBLESHOOTING.md
mcp-server-ts/: README.md  package.json
mcp-server-ts/src/: index.ts
mcp-server-ts/src/tools/: index.ts
permissions/autogenerated/: reference.md
scripts/: tauri-mcp-wrapper.sh
